--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
 h1 {
     color: maroon;
+    text-align: center;
+}
+li {
+    list-style-type: none;
+}
+
+#topnav {
+    background-color: maroon;
+    overflow: hidden;
+}
+/* come back and hard code only if bootstrap wont work */
+#topnav a {
+    float: left;
+    color: #020000;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 15px;
 }
