--- a/style/style.css
+++ b/style/style.css
@@ -42,3 +42,18 @@ li {
 #bioMain {
     text-align: center;
 }
+.jobs li{
+    text-align: center;
+    padding: 15px;
+    margin-right: 30px;
+}
+p {
+    text-align: center;
+    margin-right: 30px;
+}
+.hidden {
+    display: none;
+}
+.show{
+    display: block;
+}
