--- a/style/style.css
+++ b/style/style.css
@@ -57,3 +57,65 @@ p {
 .show{
     display: block;
 }
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container>img {
+    width: 50%;
+}
+
+.container>h1 {
+    font-family: "Montserrat", impact;
+    font-weight: 800;
+    font-size: 2.5em;
+    margin-top: -1%;
+    color: #d3be06;
+    text-shadow: 1px 1px #0a0a0a;
+    letter-spacing: 2px;
+}
+
+/* ======= CAROUSEL SECTION ======== */
+.carousel-container {
+    width: 70%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.carousel-images {
+    width: 80%;
+    background: maroon;
+    padding: 10px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    box-shadow: 2px 2px #080807;
+}
+
+.carousel-images img {
+    width: 100%;
+    border-radius: 10px;
+    display: none;
+}
+
+.carousel-button {
+    align-self: center;
+    background: #f2cd99;
+    color: #888;
+    padding: 10px;
+    border-radius: 50%;
+    text-align: center;
+    box-shadow: 1px 1px #fa8d8e;
+}
+
+.carousel-button:hover {
+    cursor: pointer;
+    background: #fa8d8e;
+    box-shadow: 1px 1px #f2cd99;
+    color: white;
+}
+
+.carousel-images img:first-of-type {
+    display: block;
+}
