--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,6 @@
+
+
+
 body {
    background-color: slategray;
 }
@@ -20,15 +23,19 @@ li {
     float: left;
     color: #020000;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 14px;
     text-decoration: none;
     font-size: 15px;
+    
 }
-
+.projls {
+    text-align: center;
+}
 .botnav {
+    background-color: gray;
+    bottom: 0;
+    width: 100%;
     grid-area: 5 / 1 /6 /-1;
-    background-color: #5a5c5b;
-    color: white;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     font-size: 0.6rem;
