got the scroll function down for the resume jobs working on centering it

--- a/style/style.css
+++ b/style/style.css
@@ -142,6 +142,10 @@ img {
 #elementText {
     padding-left: 25%;
     padding-right: 25%;
+    /* for scroll function */
+    overflow: scroll;
+    width: 200px;
+    border: 2px solid red;
 }
 #elementText1{
     padding-left: 15%;
