--- a/style/style.css
+++ b/style/style.css
@@ -1,152 +1,195 @@
+ body {
+     background-color: #f2f2f2;
+     display: grid;
+     grid-template-rows: auto auto 1fr auto;
+     height: 100vh;
+ }
 
-body {
-   background-color: slategray;
-    display: grid;
-    grid-template-rows: auto auto 1fr auto;
-    height: 100vh;
-}
+ h1 {
+     color: #333;
+     text-align: center;
+ }
 
-h1 {
-    color: maroon;
-    text-align: center;
-}
-li {
-    list-style-type: none;
-}
+ li {
+     list-style-type: none;
+ }
 
+ .topnav {
+     background-color: #333;
+     overflow: hidden;
+     min-height: 34pt;
+ }
 
-.topnav {
-    background-color: maroon;
-    overflow: hidden;
-    min-height: 34pt;
-}
-/* come back and hard code only if bootstrap wont work */
-.topnav a {
-    float: left;
-    color: #020000;
-    text-align: center;
-    padding: 14px 14px;
-    text-decoration: none;
-    font-size: 15px;
-    
-}
-.projls {
-    text-align: center;
-}
-.botnav {
-    background-color: gray;
-    bottom: 0;
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    font-size: 0.6rem;
-    bottom: 0;
-}
+ .topnav a {
+     float: left;
+     color: #fff;
+     text-align: center;
+     padding: 14px 14px;
+     text-decoration: none;
+     font-size: 15px;
+ }
 
-.botnav a {
-    float: left;
-    display: inline;
-    color: #000000;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 12px; 
-}
-.greating {
-    text-align: center;
-}
-.bioMain {
-    text-align: center;
-}
-.jobs li{
-    text-align: center;
-    padding: 15px;
-    margin-right: 30px;
-}
-p {
-    text-align: center;
-    margin-right: 30px;
-}
-.hidden {
-    display: none;
-}
-.show{
-    display: block !important;
-}
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+ .projls {
+     text-align: center;
+ }
+ 
 
+ .botnav {
+     background-color: #d9d9d9;
+     bottom: 0;
+     width: 100%;
+     display: grid;
+     grid-template-columns: repeat(2, 1fr);
+     font-size: 0.6rem;
+     bottom: 0;
+ }
 
-.container>h1 {
-    font-family: "Montserrat", impact;
-    font-weight: 800;
-    font-size: 2.5em;
-    margin-top: -1%;
-    color: #d3be06;
-    text-shadow: 1px 1px #0a0a0a;
-    letter-spacing: 2px;
-}
+ .botnav a {
+     float: left;
+     display: inline;
+     color: #333;
+     text-align: center;
+     padding: 14px 16px;
+     text-decoration: none;
+     font-size: 12px;
+ }
+
+ .greating {
+     text-align: center;
+ }
+
+ .bioMain {
+     text-align: center;
+ }
+
+ .jobs li {
+     text-align: center;
+     padding: 15px;
+     margin-right: 30px;
+ }
+
+ p {
+     text-align: center;
+     margin-right: 30px;
+ }
+
+ .hidden {
+     display: none;
+ }
+
+ .show {
+     display: block !important;
+ }
+
+ .container {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+ }
+
+ .container>h1 {
+     font-family: "Montserrat", impact;
+     font-weight: 800;
+     font-size: 2.5em;
+     margin-top: -1%;
+     color: #d3be06;
+     text-shadow: 1px 1px #0a0a0a;
+     letter-spacing: 2px;
+ }
 
 /* ======= CAROUSEL SECTION ======== */
 .carousel-container {
-    width: 70%;
+    /* width: 70%; */
+    /* width: 45vh; */
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .carousel-images {
     width: 80%;
-    background: maroon;
+    background: #fffefc2f;
     padding: 10px;
     border-radius: 10px;
-    box-sizing: border-box;
-    box-shadow: 2px 2px #080807;
-    display: block;
+    box-shadow: 1px 1px #a3a2a2be;
 }
 
-@media screen {
-    
-}
+@media screen {}
+
 img {
     width: 100%;
     height: 45vh;
     border-radius: 10px;
     display: none;
-
+    object-fit: inherit;
 }
 
 .carousel-button {
     align-self: center;
-    background: #f2cd99;
-    color: #888;
+    background: #888;
+    color: #f2cd99;
     padding: 10px;
     border-radius: 50%;
     text-align: center;
     box-shadow: 1px 1px #fa8d8e;
+    transition: all 0.3s ease-in-out;
 }
 
 .carousel-button:hover {
     cursor: pointer;
     background: #fa8d8e;
-    box-shadow: 1px 1px #f2cd99;
+    box-shadow: 1px 1px #888;
     color: white;
 }
 
 .carousel-images img:first-of-type {
     display: block;
 }
+
 /* text elenement */
-#elementText {
+.element-text {
+    width: 80%;
+    padding: 15px;
+    margin: 0 auto;
+    text-align: justify;
+    border: 1px solid #fa8d8e;
+    border-radius: 10px;
+    box-shadow: 1px 1px #888;
+    background: #f2cd99;
+    font-size: 0.8rem;
+    overflow: scroll;
+}
+
+.info-container {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.info-text {
+    width: 80%;
+    padding: 15px;
+    margin: 0 auto;
+    text-align: justify;
+    background: #f2cd99;
+    border: 1px solid #fa8d8e;
+    border-radius: 10px;
+    box-shadow: 1px 1px #888;
+    font-size: 0.8rem;
+}
+/* text elenement */
+#elementTextR {
     padding-left: 25%;
     padding-right: 25%;
+    margin-right: 40vh;
     /* for scroll function */
     overflow: scroll;
     width: 200px;
     border: 2px solid red;
     border-radius: 15px;
+}
+#elementText {
+    padding-left: 25%;
+    padding-right: 25%;
 }
 #elementText1{
     padding-left: 15%;
@@ -155,7 +198,4 @@ img {
 #elementText2{
     padding-left: 15%;
     padding-right: 15%;
-}
-.infoF {
-    margin-right: 40vh;
 }
