--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,9 @@
      grid-template-rows: auto auto 1fr auto;
      height: 100vh;
  }
-
+ @media only screen and (max-width: 900px) {
+     
+ }
  h1 {
      color: #333;
      text-align: center;
