--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@
  }
  @media only screen and (max-width: 900px) {
     .resume {
-        width: 85%;
+        width: 40vh;
     }
     div #elementTextR {
         padding-left: 25px;
@@ -22,7 +22,7 @@
         text-align: center;
         margin-left: 30px;
     }
-    
+
  }
 
  
