--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@
      grid-template-rows: auto auto 1fr auto;
      height: 100vh;
  }
- @media only screen and (max-width: 900px) {
+ @media only screen and (max-width: 800px) {
     .resume {
         width: 40vh;
     }
@@ -37,7 +37,7 @@
 
  .topnav {
      background-color: #333;
-     overflow: hidden;
+     overflow: auto;
      min-height: 34pt;
  }
 
@@ -48,6 +48,7 @@
      padding: 14px 14px;
      text-decoration: none;
      font-size: 15px;
+
  }
 
  .projls {
