--- a/style/style.css
+++ b/style/style.css
@@ -4,9 +4,9 @@
      grid-template-rows: auto auto 1fr auto;
      height: 100vh;
  }
- @media only screen and (max-width: 800px) {
+ @media only screen and (max-width: 900px) {
     .resume {
-        width: 40vh;
+        width: 80%;
     }
     div #elementTextR {
         padding-left: 25px;
@@ -22,7 +22,15 @@
         text-align: center;
         margin-left: 30px;
     }
-
+     .topnav {
+        background-color: #333;
+        overflow: auto;
+        min-height: 34pt;
+    }
+    body {
+        width: 80%;
+        
+    }
  }
 
  
